--- a/app/views/layouts/public/_header.html.erb
+++ b/app/views/layouts/public/_header.html.erb
@@ -12,7 +12,7 @@
           <div class="close-btn-user"><span></span><span></span></div>
           <div class="search-area">
             <%= search_form_for @q, url: search_members_path do |f| %>
-              <%= f.search_field :name_cont, placeholder: "ユーザーを探す" , autocomplete: 'off', required: true %>
+              <%= f.text_field :name_cont, placeholder: "ユーザーを探す" , autocomplete: 'off', required: true %>
               <input type="submit" id="searchsubmit" value="">
             <% end %>
           </div>
@@ -22,7 +22,7 @@
           <div class="close-btn-coordinate"><span></span><span></span></div>
           <div class="search-area">
             <%= search_form_for @search_post, url: search_posts_path do |f| %>
-              <%= f.search_field :tags_name_cont, placeholder: "コーディネートを探す",  autocomplete: 'off', required: true %>
+              <%= f.text_field :tags_name_cont, placeholder: "コーディネートを探す",  autocomplete: 'off', required: true %>
               <input type="submit" id="searchsubmit" value="">
             <% end %>
           </div>
