--- a/app/views/public/members/index.html.erb
+++ b/app/views/public/members/index.html.erb
@@ -14,7 +14,7 @@
 <!--ユーザー一覧メイン-->
 <div class="container">
   <div class="row">
-    <div class="col-md-8 offset-md-2 d-flex justify-content-between">
+    <div class="col-lg-8 offset-lg-2 d-flex justify-content-between">
       <div class="container">
         <div class="row">
           <!--性別選択-->
