--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -38,7 +38,7 @@
   </div>
 </header>
 <div class="container mt-4">
-  <div class="row">
+  <div class="row g-3">
     <!--投稿画像-->
     <div class="col-md-5 offset-md-1">
       <div class="card">
