拡張子変更

--- a/app/views/layouts/admin/_header.html.erb
+++ b/app/views/layouts/admin/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="container d-flex justify-content-around">
     <div id="header-search-area">
       <div class="dropdown">
-        <%= image_tag "search-icon.jpeg", class: "open-btn dropdown-toggle", id: "dropdownMenuButton1", "data-bs-toggle": "dropdown" %>
+        <%= image_tag "search-icon.jpg", class: "open-btn dropdown-toggle", id: "dropdownMenuButton1", "data-bs-toggle": "dropdown" %>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
           <li><button class="dropdown-item user-search">ユーザー検索</a></li>
           <li><button class="dropdown-item coordinate-search">コーディネート検索</a></li>
