--- a/app/views/public/members/followings.html.erb
+++ b/app/views/public/members/followings.html.erb
@@ -45,19 +45,25 @@
   <div class="row">
     <div class="col-md-6 offset-md-3">
       <div class="coordinate_follow d-flex text-center">
-        <div class="coordinate_follow_box col-4">
+        <div class="coordinate_follow_box col-3">
           <%= link_to member_path(@member) do %>
             <%= @member.posts.count %>
             <span>コーディネート</span>
           <% end %>
         </div>
-        <div class="coordinate_follow_box col-4">
+        <div class="coordinate_follow_box col-3">
+          <%= link_to favorites_member_path(@member) do %>
+            <%= @member.favorites.count %>
+            <span>いいね</span>
+          <% end %>
+        </div>
+        <div class="coordinate_follow_box col-3">
           <%= link_to followings_member_path(@member) do %>
             <%= @member_followings.count %>
             <span>フォロー</span>
           <% end %>
         </div>
-        <div class="coordinate_follow_box col-4">
+        <div class="coordinate_follow_box col-3">
           <%= link_to followers_member_path(@member) do %>
             <%= @member_followers.count %>
             <span>フォロワー</span>
@@ -75,4 +81,3 @@
     <h4>まだフォローしていません</h4>
   </div>
 <% end %>
-
