--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -711,6 +711,56 @@
   transform: scale(1, 1);
 }
 
+// グリーンボタンの設定
+.success-btn{
+    /*アニメーションの起点とするためrelativeを指定*/
+  position: relative;
+  overflow: hidden;
+    /*ボタンの形状*/
+  text-decoration: none;
+  display: inline-block;
+  border: 1px solid #198754;/* ボーダーの色と太さ */
+  background: #198754;
+  padding: 10px 30px;
+  text-align: center;
+  outline: none;
+    /*アニメーションの指定*/
+  transition: ease .2s;
+}
+
+.success-btn span {
+  position: relative;
+  z-index: 3;/*z-indexの数値をあげて文字を背景よりも手前に表示*/
+  color: #fff;
+}
+
+.success-btn:hover span{
+  color: #198754;
+}
+
+/*== 背景が流れる（中央から縦全体） */
+.bg-green:before {
+  content: '';
+    /*絶対配置で位置を指定*/
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+    /*色や形状*/
+  background: #fff;
+  width: 100%;
+  height: 100%;
+    /*アニメーション*/
+  transition: transform .3s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+  transform: scale(1, 0);
+  transform-origin: center;
+}
+
+/*hoverした際の形状*/
+.bg-green:hover:before{
+  transform: scale(1, 1);
+}
+
 // 検索フォーム
 
 .open-btn{
