--- a/app/views/admin/members/followers.html.erb
+++ b/app/views/admin/members/followers.html.erb
@@ -20,7 +20,9 @@
         </div>
         <div class="withdraw_btn">
           <% if @member.is_deleted != true %>
-            <%= link_to "退会させる", withdraw_admin_member_path(@member), method: :patch, data: {confirm: "本当に退会させますか？"}, class: "btn btn-danger mb-3" %>
+            <%= link_to withdraw_admin_member_path(@member), method: :patch, data: {confirm: "本当に退会させますか？"}, class: "danger-btn bg-red" do %>
+              <span>退会させる</span>
+            <% end %>
           <% end %>
         </div>
       </div>
@@ -33,21 +35,27 @@
   <div class="row">
     <div class="col-md-6 offset-md-3">
       <div class="coordinate_follow d-flex text-center">
-        <div class="coordinate_follow_box col-4">
+        <div class="coordinate_follow_box col-3">
           <%= link_to admin_member_path(@member) do %>
             <%= @member.posts.count %>
             <span>コーディネート</span>
           <% end %>
         </div>
-        <div class="coordinate_follow_box col-4">
+        <div class="coordinate_follow_box col-3">
+          <%= link_to favorites_admin_member_path(@member) do %>
+            <%= @member.favorites.count %>
+            <span>いいね</span>
+          <% end %>
+        </div>
+        <div class="coordinate_follow_box col-3">
           <%= link_to followings_admin_member_path(@member) do %>
-            <%= @member.followings.count %>
+            <%= @member_followings.count %>
             <span>フォロー</span>
           <% end %>
         </div>
-        <div class="coordinate_follow_box col-4">
+        <div class="coordinate_follow_box col-3">
           <%= link_to followers_admin_member_path(@member) do %>
-            <%= @member.followers.count %>
+            <%= @member_followers.count %>
             <span>フォロワー</span>
           <% end %>
         </div>
