いいね多い順追加

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -901,3 +901,11 @@
   transform: translateY(-6px) rotate(135deg);
   width: 50%;
 }
+
+// 並び順ボタン
+.order-btn {
+  border: none;
+  margin-top: 18px;
+  background: inherit;
+  font-size: 14px;
+}
