--- a/app/views/admin/posts/many_favorites.html.erb
+++ b/app/views/admin/posts/many_favorites.html.erb
@@ -42,7 +42,7 @@
               <div class="col-3 offset-9 text-end">
                 <div class="dropdown">
                   <button class="dropdown-toggle order-btn" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-                    新着順
+                    人気順
                   </button>
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                     <li><%= link_to "新着順", admin_posts_path, class: "dropdown-item" %></li>
@@ -54,7 +54,7 @@
             <div class="row">
               <%= render "index", posts: @posts %>
             </div>
-            <%= paginate @posts %>
+
           </div>
         </div>
       </div>
