--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -47,6 +47,19 @@
           <!--コーディネート一覧-->
           <div class="col-md-9">
             <div class="row">
+              <div class="col-3 offset-9 text-end">
+                <div class="dropdown">
+                  <button class="dropdown-toggle order-btn" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                    新着順
+                  </button>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                    <li><%= link_to "新着順", posts_path, class: "dropdown-item" %></li>
+                    <li><%= link_to "人気順", many_favorites_posts_path, class: "dropdown-item" %></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="row">
               <%= render "index", posts: @posts %>
             </div>
             <%= paginate @posts %>
