--- a/app/views/public/members/many_followers.html.erb
+++ b/app/views/public/members/many_followers.html.erb
@@ -35,7 +35,7 @@
               <div class="col-3 offset-9 text-end">
                 <div class="dropdown">
                   <button class="dropdown-toggle order-btn" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-                    新着順
+                    人気順
                   </button>
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                     <li><%= link_to "新着順", members_path, class: "dropdown-item" %></li>
@@ -47,7 +47,7 @@
             <ul class="ps-0">
               <%= render "index", members: @members %>
             </ul>
-            <%= paginate @members %>
+            
           </div>
         </div>
       </div>
