ページネーションCSS

--- a/app/views/admin/members/followings.html.erb
+++ b/app/views/admin/members/followings.html.erb
@@ -30,7 +30,7 @@
   </div>
 </header>
 
-<!--ユーザーの投稿数、フォロー、フォロワー数-->
+<!--ユーザーの投稿数、いいね、フォロー、フォロワー数-->
 <div class="container mt-3">
   <div class="row">
     <div class="col-md-6 offset-md-3">
@@ -65,10 +65,13 @@
 </div>
 
 <% if @members.present? %>
-  <%= render "follow", members: @members %>
-<% else %>
-　<div class="pt-5 text-center">
-    <h4>まだフォローしていません</h4>
+  <div class="container">
+    <div class="row">
+      <%= render "follow", members: @members %>
+      <%= paginate @members%>
+    </div>
   </div>
+<% else %>
+  <h4 class="pt-5 text-center">まだフォローしていません</h4>
 <% end %>
 
