--- a/app/views/admin/posts/many_favorites.html.erb
+++ b/app/views/admin/posts/many_favorites.html.erb
@@ -54,7 +54,7 @@
             <div class="row">
               <%= render "index", posts: @posts %>
             </div>
-
+            <%= paginate @posts %>
           </div>
         </div>
       </div>
