--- a/app/views/public/members/index.html.erb
+++ b/app/views/public/members/index.html.erb
@@ -1,3 +1,4 @@
+<!--タイトル-->
 <header id="title_top">
   <div class="container">
     <div class="row">
@@ -17,7 +18,7 @@
     <div class="col-lg-8 offset-lg-2 d-flex justify-content-between">
       <div class="container">
         <div class="row">
-          <!--性別選択-->
+          <!--サイドバー-->
           <div class="col-lg-3 gender-nav">
             <nav id="sidebar">
               <h2 class="title">性別</h2>
@@ -31,6 +32,7 @@
 
           <!--ユーザー一覧-->
           <div class="col-lg-9">
+            <!--並び替え-->
             <div class="row">
               <div class="col-3 offset-9 text-end">
                 <div class="dropdown">
