--- a/app/views/public/tags/tag_posts.html.erb
+++ b/app/views/public/tags/tag_posts.html.erb
@@ -17,7 +17,7 @@
     <div class="col-md-10 offset-md-1 d-flex justify-content-between">
       <div class="container">
         <div class="row">
-          <!--性別選択-->
+          <!--サイドバー-->
           <div class="col-md-3 gender-nav">
             <nav id="sidebar">
               <section class="gender pb-3">
