--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -18,8 +18,12 @@
   }
 
   nav {
+    background: inherit;
+  }
+
+  .navbar {
     z-index: 2;
-    background: #fff !important;
+    background: #fff;
   }
 
   h1,h2,h3,h4,h5,h6 {
@@ -94,6 +98,7 @@
     border-radius: 3px;
     padding: 21px 0 28px 0;
     margin-top: 18px;
+    background: #fff;
   }
 
   #switch_gender {
@@ -908,4 +913,23 @@
   margin-top: 18px;
   background: inherit;
   font-size: 14px;
+}
+
+// ページネーション
+.pagenation {
+  background: inherit;
+}
+
+.page-link {
+  color: #000;
+}
+
+.page-link:hover {
+  color: #000;
+}
+
+.page-item.active .page-link {
+  color: #000;
+  background: #999;
+  border-color: #999;
 }
