--- a/app/views/layouts/public/application.html.erb
+++ b/app/views/layouts/public/application.html.erb
@@ -24,13 +24,7 @@
     </main>
 
     <footer id="footer">
-      <p id="page-top"><a href="#">Topへ</a></p>
-      <div id="sns-icon">
-        <div class="me-3"><i class="fa-brands fa-instagram"></i></div>
-        <div class="me-3"> <i class="fa-brands fa-twitter"></i></div>
-        <div><i class="fa-brands fa-facebook"></i></div>
-      </div>
-      <p class="text-center">&copy; copyright.</p>
+      <%= render "layouts/public/footer" %>
     </footer>
   </body>
 </html>
