--- a/app/views/public/homes/_top.html.erb
+++ b/app/views/public/homes/_top.html.erb
@@ -1,3 +1,4 @@
+<!--性別選択-->
 <div id="switch_gender">
   <div class="container">
     <div class="row">
@@ -17,7 +18,7 @@
     <div class="col-md-10 offset-md-1 d-flex justify-content-between">
       <div class="container">
         <div class="row">
-          <!--性別選択-->
+          <!--サイドバー-->
           <div class="col-md-3">
             <nav id="sidebar">
               <h2 class="title ms-3">探す</h2>
@@ -63,7 +64,7 @@
                 </div>
               <% end %>
             </div>
-            <%= paginate posts %>
+            <%= paginate @posts %>
           </div>
         </div>
       </div>
