--- a/app/views/public/members/favorites.html.erb
+++ b/app/views/public/members/favorites.html.erb
@@ -1,3 +1,4 @@
+<!--タイトル-->
 <header id="title_top">
   <div class="container">
     <div class="row">
@@ -50,8 +51,8 @@
   </div>
 </header>
 
-<!--ユーザーの投稿数、フォロー、フォロワー数-->
 <div class="container mt-3">
+  <!--ユーザーの投稿数、いいね数、フォロー、フォロワー数-->
   <div class="row">
     <div class="col-md-6 offset-md-3">
       <div class="coordinate_follow d-flex text-center">
@@ -82,45 +83,33 @@
       </div>
     </div>
   </div>
+
+  <!--いいねした投稿一覧-->
   <div class="row">
-    <% if @member == current_member && @member.posts.count == 0 %>
-      <div class="pt-5 text-center">
-        <h4>コーディネートを投稿してみよう！</h4>
-        <p>
-          毎日のコーデ記録始めませんか？<br>
-          自分のコーデを共有しよう！
-        </p>
-      </div>
-      <% elsif @member != current_member && @member.posts.count == 0 %>
-        <div class="pt-5 text-center">
-          <h4>まだ投稿がありません</h4>
-        </div>
-    <% else %>
-      <% if @favorites.present? %>
-        <% @favorites.each do |post| %>
-          <div class="col-lg-3 col-md-4 col-sm-6 g-5">
-            <div class="card card-effect">
-              <%= link_to post_path(post) do %>
-                <%= image_tag post.outfit_image, class: "outfit_image_index" %>
-              <% end %>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item" id="favorite_buttons_<%= post.id %>">
-                  <% if member_signed_in? %>
-                    <%= render "public/favorites/favorite", post: post %>
-                  <% else %>
-                    <p class="text-center">
-                      <i class="fa-solid fa-heart"></i>
-                      <%= post.favorites.count %>
-                    </p>
-                  <% end %>
-                </li>
-              </ul>
-            </div>
+    <% if @favorites.present? %>
+      <% @favorites.each do |post| %>
+        <div class="col-lg-3 col-md-4 col-sm-6 g-5">
+          <div class="card card-effect">
+            <%= link_to post_path(post) do %>
+              <%= image_tag post.outfit_image, class: "outfit_image_index" %>
+            <% end %>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item" id="favorite_buttons_<%= post.id %>">
+                <% if member_signed_in? %>
+                  <%= render "public/favorites/favorite", post: post %>
+                <% else %>
+                  <p class="text-center">
+                    <i class="fa-solid fa-heart text-danger"></i>
+                    <%= post.favorites.count %>
+                  </p>
+                <% end %>
+              </li>
+            </ul>
           </div>
-        <% end %>
-      <% else %>
-        <h2 class="text-center pt-5">いいねした投稿がありません</h2>
+        </div>
       <% end %>
+    <% else %>
+      <h2 class="text-center pt-5">いいねした投稿がありません</h2>
     <% end %>
   </div>
 </div>
