--- a/app/views/public/members/many_followers.html.erb
+++ b/app/views/public/members/many_followers.html.erb
@@ -1,3 +1,4 @@
+<!--タイトル-->
 <header id="title_top">
   <div class="container">
     <div class="row">
@@ -47,7 +48,7 @@
             <ul class="ps-0">
               <%= render "index", members: @members %>
             </ul>
-            
+            <%= paginate @members %>
           </div>
         </div>
       </div>
