--- a/app/views/public/members/search.html.erb
+++ b/app/views/public/members/search.html.erb
@@ -1,48 +1,49 @@
-  <header id="title_top">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 offset-md-2 d-flex justify-content-between">
-          <h1>ユーザー検索結果</h1>
-          <div class="all_member">
-            <h2 class="ps-3"><%= @search_members.count %><span>件</span></h2>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-  <!--main-->
+<!--タイトル-->
+<header id="title_top">
   <div class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2 d-flex justify-content-between">
-        <div class="container">
-          <div class="row">
-            <!--性別選択-->
-            <div class="col-lg-3 gender-nav">
-              <nav id="sidebar">
-                <h2 class="title">性別</h2>
-                <ul class="m-0">
-                  <li class="py-2"><%= link_to "ALL", members_path %></li>
-                  <li class="py-2"><%= link_to "MEN", men_members_path %></li>
-                  <li class="py-2"><%= link_to "WOMEN", women_members_path %></li>
-                </ul>
-              </nav>
-            </div>
+        <h1>ユーザー検索結果</h1>
+        <div class="all_member">
+          <h2 class="ps-3"><%= @search_members.count %><span>件</span></h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
 
-            <!--ユーザー一覧-->
-            <div class="col-lg-9">
-              <% if @search_members.present? %>
-                <ul class="ps-0">
-                  <%= render "index", members: @search_members %>
-                </ul>
-                <%= paginate @search_members %>
-              <% else %>
-                <h3 class="pt-5 text-center">条件に一致するユーザーは見つかりませんでした</h3>
-              <% end %>
-            </div>
+<!--メイン-->
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 offset-md-2 d-flex justify-content-between">
+      <div class="container">
+        <div class="row">
+          <!--サイドバー-->
+          <div class="col-lg-3 gender-nav">
+            <nav id="sidebar">
+              <h2 class="title">性別</h2>
+              <ul class="m-0">
+                <li class="py-2"><%= link_to "ALL", members_path %></li>
+                <li class="py-2"><%= link_to "MEN", men_members_path %></li>
+                <li class="py-2"><%= link_to "WOMEN", women_members_path %></li>
+              </ul>
+            </nav>
+          </div>
+          <!--ユーザー一覧-->
+          <div class="col-lg-9">
+            <% if @search_members.present? %>
+              <ul class="ps-0">
+                <%= render "index", members: @search_members %>
+              </ul>
+              <%= paginate @search_members %>
+            <% else %>
+              <h3 class="pt-5 text-center">条件に一致するユーザーは見つかりませんでした</h3>
+            <% end %>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
 
 
