--- a/app/views/public/members/withdraw_confirm.html.erb
+++ b/app/views/public/members/withdraw_confirm.html.erb
@@ -1,3 +1,4 @@
+<!--タイトル-->
 <header id="title_top">
   <div class="container">
     <div class="row">
@@ -10,6 +11,7 @@
   </div>
 </header>
 
+<!--メイン-->
 <div class="container">
   <div class="row">
     <div class="col-md-8 offset-md-2">
