--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -1,6 +1,7 @@
 <!--エラーメッセージ-->
 <%= render "layouts/error", model: @post%>
 
+<!--タイトル-->
 <header id="title_top">
   <div class="container">
     <div class="row">
@@ -12,6 +13,7 @@
     </div>
   </div>
 </header>
+
 <div class="container">
   <div class="row">
     <div class="col-md-8 offset-md-2">
