flashメッセージJS追加

--- a/app/views/layouts/public/application.html.erb
+++ b/app/views/layouts/public/application.html.erb
@@ -28,3 +28,12 @@
     </footer>
   </body>
 </html>
+
+<script>
+  // フラッシュメッセージ
+  $(function(){
+    $('#notice').fadeOut(4000);  //４秒かけて消えていく
+    $('#alert').fadeOut(4000);  //４秒かけて消えていく
+    $('.alert-warning').fadeOut(4000);  //４秒かけて消えていく
+  });
+</script>
