--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -28,66 +28,12 @@
     </footer>
 
     <script>
-      var elements = document.getElementsByClassName('search_form')
-      Array.prototype.forEach.call(elements, function(element){
-        element.addEventListener("click", function(){
-          var e = document.getElementById('exampleModal')
-          e.classList.add("show")
-          e.style.display = "block"
-          e.setAttribute("aria-modal", true)
-          e.setAttribute("role", "dialog")
-          e.removeAttribute("aria-hidden")
-        })
-      })
-
-      var closeBtn = document.getElementsByClassName('btn-close')[0]
-      closeBtn.addEventListener("click", function(){
-        var e = document.getElementById('exampleModal')
-        e.classList.remove("show")
-        e.style.display = "none"
-        e.removeAttribute("aria-modal")
-        e.removeAttribute("role")
-        e.setAttribute("aria-hidden", true)
-      })
-
-      var userSearchTab = document.getElementById('user-search-tab')
-      var coodinateSearchTab = document.getElementById('coodinate-search-tab')
-        userSearchTab.addEventListener("click", function(){
-          // userSearchTab.classList.toggle("active")
-          // coodinateSearchTab.classList.toggle("active")
-          userSearchTab.classList.add("active")
-          coodinateSearchTab.classList.remove("active")
-          showMemberSearch()
-          hidePostSearch()
-        })
-
-      coodinateSearchTab.addEventListener("click", function(){
-          userSearchTab.classList.remove("active")
-          coodinateSearchTab.classList.add("active")
-          showPostSearch()
-          hideMemberSearch()
-        })
-
-    function showPostSearch() {
-      $('#post_search').addClass("d-flex")
-      $('#post_search').show()
-    }
-
-    function hidePostSearch() {
-      $('#post_search').removeClass("d-flex")
-      $('#post_search').hide()
-    }
-
-    function showMemberSearch() {
-      $('#member_search').addClass("d-flex")
-      $('#member_search').show()
-    }
-
-    function hideMemberSearch() {
-      $('#member_search').removeClass("d-flex")
-      $('#member_search').hide()
-    }
-
+      // フラッシュメッセージ
+      $(function(){
+        $('#notice').fadeOut(4000);  //４秒かけて消えていく
+        $('#alert').fadeOut(4000);  //４秒かけて消えていく
+        $('.alert-warning').fadeOut(4000);  //４秒かけて消えていく
+      });
     </script>
   </body>
 </html>
