最終チェック完了

--- a/app/views/admin/members/favorites.html.erb
+++ b/app/views/admin/members/favorites.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2 member_info">
-        <p><%= @member.name %>のページ</p>
+        <p><%= @member.name %>のいいね一覧</p>
         <div class="member_profile mt-3">
           <div class="d-flex">
             <div>
