--- a/app/views/public/members/favorites.html.erb
+++ b/app/views/public/members/favorites.html.erb
@@ -3,11 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2">
-        <% if @member == current_member %>
-          <p>マイページ</p>
-        <% else %>
-          <p><%= @member.name %>のページ</p>
-        <% end %>
+        <p><%= @member.name %>のいいね一覧</p>
         <div class="member_profile mt-3">
           <div class="d-flex">
             <div>
