--- a/app/views/public/members/followings.html.erb
+++ b/app/views/public/members/followings.html.erb
@@ -18,7 +18,7 @@
               <p class="pt-3"><%= @member.body %></p>
             </div>
           </div>
-          <% if @member == current_member %>
+          <% if @member == current_member && @member.name != "企業様(閲覧用)" %>
             <div class="btn_area d-flex justify-content-between mt-3">
               <%= link_to edit_member_path(@member), class: "secondary-btn bg-gray" do %>
                 <span>プロフィール編集</span>
@@ -30,6 +30,12 @@
                 <span>退会について</span>
               <% end %>
             </div>
+            <% elsif @member == current_member && @member.name == "企業様(閲覧用)" %>
+              <div class="btn_area d-flex justify-content-between mt-3">
+                <%= link_to new_post_path, class: "primary-btn bg-blue" do %>
+                  <span>コーディネート登録</span>
+                <% end %>
+              </div>
           <% else %>
             <div id="follow_btn_<%= @member.id %>" class="mt-3 ms-3">
               <%= render "public/relationships/follow", member: @member %>
