--- a/app/views/public/post_comments/destroy.js.erb
+++ b/app/views/public/post_comments/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#post_comments_<%= @post.id %>").html("<%= j(render "comment", post: @post, post_comment_new: @post_comment_new) %>");
+$("#post_comments_area_<%= @post.id %>").html("<%= j(render "comment_area", post: @post) %>");
