画像アスペクト比修正

--- a/app/views/public/homes/_top.html.erb
+++ b/app/views/public/homes/_top.html.erb
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="row">
           <!--サイドバー-->
-          <div class="col-md-3">
+          <div class="col-md-3 sidebar">
             <nav id="sidebar">
               <h2 class="title ms-3">探す</h2>
               <ul>
