--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -194,14 +194,15 @@
 
   .outfit_image_index {
     width: 100%;
-    height: 326px;
+    aspect-ratio: 2 / 3;
+    object-fit: cover;
     border-radius: 2px 2px 0 0;
     border: none;
   }
 
   .outfit_image_show {
-    max-width: 550px;
-    height: 700px;
+    aspect-ratio: 5 / 7;
+    object-fit: cover;
     border-radius: 2px 2px 0 0;
     border: none;
   }
@@ -932,4 +933,8 @@
   color: #000;
   background: #999;
   border-color: #999;
+}
+
+.form-name {
+  padding-bottom: 10px;
 }
