--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -22,7 +22,7 @@
           <div class="container pt-5 pb-3">
             <div class="form-group row mb-3 align-items-center">
               <div class="col-lg-4 text-center">
-                <p>コーディネート画像</p>
+                <p class="form-name">コーディネート画像</p>
               </div>
               <div class="col-lg-8">
                 <%= f.file_field :outfit_image, accept: 'image/*', class: "form-control" %>
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group row mb-3 align-items-center">
               <div class="col-md-4 text-center">
-                <p>コーディネートのタイトル</p>
+                <p class="form-name">コーディネートのタイトル</p>
               </div>
               <div class="col-md-8 d-grid">
                 <%= f.text_field :title, class: "form-control" %>
@@ -38,10 +38,10 @@
             </div>
             <div class="form-group row mb-3 align-items-center">
               <div class="col-md-4 text-center">
-                <p>コーディネートのポイント</p>
+                <p class="form-name">コーディネートのポイント</p>
               </div>
               <div class="col-md-8 d-grid">
-                <%= f.text_area :body, class: "form-control" %>
+                <%= f.text_area :body, class: "form-control", placeholder: "400文字まで" %>
               </div>
             </div>
           </div>
