--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -60,6 +60,9 @@
       <%= link_to member_google_oauth2_omniauth_authorize_path, class: "success-btn bg-green", method: :post do %>
         <span>Googleで登録</span>
       <% end %>
+      <%= link_to member_facebook_omniauth_authorize_path, class: "primary-btn bg-blue", method: :post do %>
+        <span>Facebookで登録</span>
+      <% end %>
     </div>
   </div>
 </div>
