--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -10,3 +10,12 @@
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 <% end %>
+
+<script>
+  // フラッシュメッセージ
+  $(function(){
+    $('#notice').fadeOut(4000);  //４秒かけて消えていく
+    $('#alert').fadeOut(4000);  //４秒かけて消えていく
+    $('.alert-warning').fadeOut(4000);  //４秒かけて消えていく
+  });
+</script>
