--- a/app/views/layouts/public/_header.html.erb
+++ b/app/views/layouts/public/_header.html.erb
@@ -45,7 +45,7 @@
           </ul>
         </div>
       <% else %>
-        <%= link_to "新規登録", new_member_registration_path %> |
+        <%= link_to "新規登録", new_member_registration_path %> 
         <%= link_to "ログイン", new_member_session_path %>
       <% end %>
     </div>
@@ -57,42 +57,34 @@
     $("#search-wrap-coordinate").hide();
   });
 
-  $(".user-search").click(function () {
-    $("#search-wrap-user").show();
-    $("#search-wrap-user").addClass('panelactive');//#search-wrap-userへpanelactiveクラスを付与
-    $('#search-text').focus();//テキスト入力のinputにフォーカス
-    $("#sidebar").hide();
-    $("footer").hide();
-  });
+　function userSearch () {
+　  $(".user-search").click(function () {
+      $("#search-wrap-user").show().addClass('panelactive');
+      $('#q_name_cont').focus();//テキスト入力のinputにフォーカス
+    });
 
-  //閉じるボタンを押した時には
-  $(".close-btn-user").click(function () {
-    $("#search-wrap-user").removeClass('panelactive');//#search-wrap-userからpanelactiveクラスを除去
-    $("#sidebar").show();
-    $("footer").show();
-    $("#search-wrap-coordinate").show();
-    $("#q_name_cont").val("");
-    $("#search-wrap-user").hide();
-    $("#search-wrap-coordinate").hide();
-  });
+    //閉じるボタンを押した時
+    $(".close-btn-user").click(function () {
+      $("#search-wrap-user").removeClass('panelactive');//#search-wrap-userからpanelactiveクラスを除去
+      $("#q_name_cont").val("");
+    });
+　};
 
-  $(".coordinate-search").click(function () {
-    $("#search-wrap-coordinate").show();
-    $("#search-wrap-coordinate").addClass('panelactive');//#search-wrap-coordinateへpanelactiveクラスを付与
-    $('#search-text').focus();//テキスト入力のinputにフォーカス
-    $("#sidebar").hide();
-    $("footer").hide();
-  });
+　function coordinateSearch () {
+　  $(".coordinate-search").click(function () {
+      $("#search-wrap-coordinate").show();
+      $("#search-wrap-coordinate").addClass('panelactive');//#search-wrap-coordinateへpanelactiveクラスを付与
+      $('#q_tags_name_cont').focus();//テキスト入力のinputにフォーカス
+    });
 
-  //閉じるボタンを押した時には
-  $(".close-btn-coordinate").click(function () {
-    $("#search-wrap-coordinate").removeClass('panelactive');//#search-wrap-coordinateからpanelactiveクラスを除去
-    $("#sidebar").show();
-    $("footer").show();
-    $("#search-wrap-user").show();
-    $("#q_tags_name_cont").val("");
-    $("#search-wrap-user").hide();
-    $("#search-wrap-coordinate").hide();
-  });
+    //閉じるボタンを押した時
+    $(".close-btn-coordinate").click(function () {
+      $("#search-wrap-coordinate").removeClass('panelactive');//#search-wrap-coordinateからpanelactiveクラスを除去
+      $("#q_tags_name_cont").val("");
+    });
+　};
+
+　userSearch();
+　coordinateSearch();
 </script>
 
